--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,14 +5,14 @@
 
     <application
         android:networkSecurityConfig="@xml/network_securitynetwork_security_config"
-        android:name=".dagger.App"
+        android:name=".dagger.di.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SampleTestApp">
-        <activity android:name=".dagger.MainActivity">
+        <activity android:name=".dagger.views.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
