--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation 'com.squareup.okio:okio:1.13.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+
+    def room_version = "2.3.0"
+    implementation("androidx.room:room-runtime:$room_version")
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt("androidx.room:room-compiler:$room_version")
+    implementation "androidx.room:room-rxjava2:$room_version"
 }
