--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation project(path: ':AndroidResources')
     testImplementation 'junit:junit:4.13.2'
     testImplementation "io.mockk:mockk:1.10.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
