--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,20 @@
+/*rootProject.name = "SampleTestApp"
+include ':app'
+include ':AndroidResources'*/
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
 rootProject.name = "SampleTestApp"
 include ':app'
 include ':AndroidResources'
