--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,22 +1,22 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
+    id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.kapt'
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
-    compileOptions.incremental = false
+    compileSdk 33
+    namespace 'com.example.sampletestapp'
 
     buildFeatures {
         dataBinding true
         viewBinding true
     }
+
     defaultConfig {
         applicationId "com.example.sampletestapp"
-        minSdkVersion 24
-        targetSdkVersion 30
+        minSdk 29
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -42,18 +42,20 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
     implementation project(path: ':AndroidResources')
     testImplementation 'junit:junit:4.13.2'
     testImplementation "io.mockk:mockk:1.10.0"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "com.google.dagger:dagger:2.15"
     kapt "com.google.dagger:dagger-compiler:2.15"
 
@@ -68,7 +70,7 @@ dependencies {
     implementation 'com.squareup.okio:okio:1.13.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
 
-    def room_version = "2.3.0"
+    def room_version = "2.4.0-alpha03"
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt("androidx.room:room-compiler:$room_version")
